# peripherycpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
diag/: diag_serial.cpp  diag_spi.cpp
include/peripherycpp/: exceptions.hpp  gpio.hpp  i2c.hpp  mmio.hpp  serial.hpp  spi.hpp
peripherycpp/diag/: diag_gpio.cpp  diag_i2c.cpp  diag_mmio.cpp
peripherycpp/include/peripherycpp/: i2c.hpp  mmio.hpp
peripherycpp/src/: gpio.cpp  mmio.cpp  spi.cpp
src/: gpio.cpp  i2c.cpp  mmio.cpp  serial.cpp  spi.cpp
